Changelog
=========

1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2011-08-25)
------------------

- I18n fixes.
  [vincentfretin]


1.0 - 2011-07-19
----------------

- Initial release.

- Add MANIFEST.in.
  [WouterVH]