@@ -1,0 +1,16 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      i18n:domain="plone">
+
+    <body>
+      <input value="Remove line"
+             type="submit"
+             name="removecriteria"
+             class="removecriteria discreet"
+             i18n:attributes="value"
+             />
+
+    </body>
+</html>
